--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.27",
@@ -33,6 +34,6 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
-    "vite": "^5.0.0"
+    "vite": "^6.3.2"
   }
 }
